--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "d3-ease": "^3.0.1",
     "fontawesome": "^5.6.3",
     "react": "^18.3.1",
+    "react-circular-gauge": "^1.1.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-move": "^6.5.0",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
