--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://nizar-zahmouli.github.io/My-portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run buils" ,
+    "predeploy" :"npm run build" ,
     "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
