--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nizar-zahmouli.github.io/My-portfolio/",
+  "homepage": "https://nizar-zahmouli.github.io/My-portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
