--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "homepage": "https://nizar-zahmouli.github.io/My-portfolio/",
+  "homepage": "https://nizar-zahmouli.github.io/My-portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "d3-ease": "^3.0.1",
+    "file-saver": "^2.0.5",
     "fontawesome": "^5.6.3",
     "react": "^18.3.1",
     "react-circular-gauge": "^1.1.1",
@@ -16,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-move": "^6.5.0",
+    "react-pdf": "^9.1.0",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
@@ -24,8 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" :"npm run build" ,
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
